alphabetically reorder converter items in description
Signed-off-by: Eric Villard <dev@eviweb.fr>

--- a/src/fr/evidev/netbeans/caseconverter/Bundle.properties
+++ b/src/fr/evidev/netbeans/caseconverter/Bundle.properties
@@ -1,5 +1,5 @@
 OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Long-Description=\
-    Convert case of the selected text to :\n- UPPER CASE\n- lower case\n- CamelCase\n- snake_case\n- hyphen-case\n- Sentence case.\n- Title Case
+    Convert case of the selected text to:\n- CamelCase\n- hyphen-case\n- lower case\n- Sentence case.\n- snake_case\n- Title Case\n- UPPER CASE
 OpenIDE-Module-Name=NetBeans Case Converter
 OpenIDE-Module-Short-Description=Convert case of the selected text
