add keystore info
Signed-off-by: Eric Villard <dev@eviweb.fr>

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,3 +3,5 @@ javac.compilerargs=-Xlint -Xlint:-serial
 license.file=LICENSE
 project.license=apache20
 nbm.module.author=Eric VILLARD
+keystore=nbproject/private/keystore
+nbm_alias=eviweb
