remove HTML <p> tags from module description
Signed-off-by: Eric Villard <dev@eviweb.fr>

--- a/src/fr/evidev/netbeans/caseconverter/Bundle.properties
+++ b/src/fr/evidev/netbeans/caseconverter/Bundle.properties
@@ -1,9 +1,9 @@
 OpenIDE-Module-Display-Category=Editing
 OpenIDE-Module-Long-Description=\
-    <p>\n    <h3>Description</h3>\n    This module provides a convenient way to convert string case.\n\
-    </p>\n<p>\n    <h3>Usage</h3>\n    In the editor panel:\n    <ol>\n        <li>Select the text you want to change the case of</li>\n        <li>Right-click to open the contextual menu</li>\n        <li>Open the <code>Convert To...\
-    </code> submenu</li>\n        <li>Click on the converter of your choice</li>\n    </ol>\n    Please note that if no text is selected, the menu is disabled.\n\
-    </p>\n<p>\n    <h3>Available converters</h3>\n    <ul>\n        <li><b>CamelCase</b>: first capitalized letter of each word, no space</li>\n        <li><b>hyphen-case</b>: lower case words separated with an hyphen</li>\n        <li><b>lower case</b>: lower case words</li>\n        <li><b>Sentence case.\
-    </b>: first capitalized letter of the first word, ends with a dot (capital letters within\n            the sentence are preserved)</li>\n        <li><b>snake_case</b>: lower case words separated with an underline character</li>\n        <li><b>Title Case</b>: first capitalized letter of each word, one space between words</li>\n        <li><b>UPPER CASE</b>: upper case words</li>\n    </ul>\n</p>
+    This module provides a convenient way to convert string case.\n\n\
+    <h3>Usage</h3>\nIn the editor panel:\n<ol>\n    <li>Select the text you want to change the case of</li>\n    <li>Right-click to open the contextual menu</li>\n    <li>Open the <code>Convert To...\
+    </code> submenu</li>\n    <li>Click on the converter of your choice</li>\n</ol>\nPlease note that if no text is selected, the menu is disabled.\n\n\
+    <h3>Available converters</h3>\n<ul>\n    <li><b>CamelCase</b>: first capitalized letter of each word, no space</li>\n    <li><b>hyphen-case</b>: lower case words separated with an hyphen</li>\n    <li><b>lower case</b>: lower case words</li>\n    <li><b>Sentence case.\
+    </b>: first capitalized letter of the first word, ends with a dot (capital letters within\n        the sentence are preserved)</li>\n    <li><b>snake_case</b>: lower case words separated with an underline character</li>\n    <li><b>Title Case</b>: first capitalized letter of each word, one space between words</li>\n    <li><b>UPPER CASE</b>: upper case words</li>\n</ul>
 OpenIDE-Module-Name=NetBeans Case Converter
 OpenIDE-Module-Short-Description=Convert case of the selected text
