--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,56 @@
     <artifactId>netbeans-case-converter</artifactId>
     <version>0.2.0</version>
     <packaging>nbm</packaging>
+    <url>https://github.com/eviweb/netbeans-case-converter</url>
+    <description>
+This module provides a convenient way to convert string case.
+
+&lt;h3&gt;Usage&lt;/h3&gt;
+In the editor panel:
+&lt;ol&gt;
+    &lt;li&gt;Select the text you want to change the case of&lt;/li&gt;
+    &lt;li&gt;Right-click to open the contextual menu&lt;/li&gt;
+    &lt;li&gt;Open the &lt;code&gt;Convert To...
+    &lt;/code&gt; submenu&lt;/li&gt;
+    &lt;li&gt;Click on the converter of your choice&lt;/li&gt;
+&lt;/ol&gt;
+Please note that if no text is selected, the menu is disabled.
+
+&lt;h3&gt;Available converters&lt;/h3&gt;
+&lt;ul&gt;
+    &lt;li&gt;&lt;b&gt;camelCase&lt;/b&gt;: first capitalized letter of each word, except for the first letter of the resulting word, no space&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;hyphen-case&lt;/b&gt;: lower case words separated with an hyphen&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;lower case&lt;/b&gt;: lower case words&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;PascalCase&lt;/b&gt;: first capitalized letter of each word, no space&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;Sentence case.
+    &lt;/b&gt;: first capitalized letter of the first word, ends with a dot (capital letters within
+        the sentence are preserved)&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;snake_case&lt;/b&gt;: lower case words separated with an underline character&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;Title Case&lt;/b&gt;: first capitalized letter of each word, one space between words&lt;/li&gt;
+    &lt;li&gt;&lt;b&gt;UPPER CASE&lt;/b&gt;: upper case words&lt;/li&gt;
+&lt;/ul&gt;
+    </description>
+    <developers>
+        <developer>
+            <id>eviweb</id>
+            <name>Eric VILLARD</name>
+            <email>dev@eviweb.fr</email>
+            <url>https://github.com/eviweb</url>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:https://github.com/eviweb/netbeans-case-converter.git</connection>
+        <developerConnection>scm:git:https://github.com/eviweb/netbeans-case-converter.git</developerConnection>
+        <url>https://github.com/eviweb/netbeans-case-converter/tree/${project.scm.tag}</url>
+        <tag>master</tag>
+    </scm>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <build>
         <plugins>
             <plugin>
