--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>fr.evidev.netbeans.modules</groupId>
     <name>NetBeans Case Converter</name>
     <artifactId>netbeans-case-converter</artifactId>
-    <version>0.2.1</version>
+    <version>0.2.2</version>
     <packaging>nbm</packaging>
     <url>https://github.com/eviweb/netbeans-case-converter</url>
     <description>
@@ -99,8 +99,7 @@ Please note that if no text is selected, the menu is disabled.
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
